# mlops-template

./: README.md  pyproject.toml
.github/workflows/: ct-ci-cd.yaml
k8s/api/: Dockerfile  api.yaml
k8s/experiment/: Dockerfile  kubernetes_config.json  kubernetes_job_template.yaml
k8s/mlflow/: Dockerfile  dailyclean.yml  mlflow.yml
scripts/: get-oc-namespace.sh  get-oc-route.sh
src/mlops_ses/: main.py
src/mlops_ses/training/: MLProject  load_data.py  main.py  split_train_test.py  train.py  validate.py
src/summit/api/: infer.py  main.py
src/summit/training/: MLProject  main.py
src/summit/training/steps/: load_data.py  split_train_test.py  train.py  validate.py
tests/: test_integration.py  test_main.py
tests/api/: test_api_infer.py  test_api_main.py
tests/ci/: test_ci_search_mlflow.py
tests/training/: test_training_main.py
tests/training/steps/: test_load_data.py  test_split_train_test.py  test_train.py  test_validate.py
