[project]
name = "mlops-template-ses-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "mlflow>=3.4.0",
    "scikit-learn>=1.7.2",
]

[project.scripts]
hello = "mlops_ses.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
