[project]
name = "mlops-template-ses-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
hello = "summit.main:main"
api = "summit.api.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
api = [
    "fastapi>=0.119.0",
    #"opentelemetry-exporter-otlp>=1.39.0",
    "mlflow-tracing>=3.4.0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "uvicorn>=0.37.0",
]
training = [
    "mlflow[extras]>=3.4.0",
    "setuptools>=80.9.0", # for ydata-profiling dependency, bug with python 3.13
    "ydata-profiling>=4.17.0",
]
